# hello

./: dune-project  hello.opam
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: hello.cmxs
_build/default/lib/.hello.objs/byte/: hello.cmt
_build/default/lib/.merlin-conf/: lib-hello
_build/default/test/.hello.eobjs/byte/: dune__exe__Hello.cmti
_build/default/test/.hello.eobjs/native/: dune__exe__Hello.cmx
_build/default/test/.merlin-conf/: exe-hello
